Change verification system, add audit routes
